tests/error/construct/tvar_def.mml
type d = | Co of 'a

()
